# Alter

./: .gitignore  Makefile  README.md  alter.py  console.py  console_manager.py  console_test.py  downloader.py  pyproject.toml  requirements.txt  simple_downloader.py  tester.py
src/alter/: __main__.py  cli.py
src/alter/core/: downloader.py  formatting.py  models.py
src/alter/ui/: app.py  screens.py
tests/: test_core.py
