[project]
name = "alter"
version = "0.1.0"
description = "Terminal-based download manager with a live Textual UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "amirrezaes" }
]
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "textual>=0.50.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/amirrezaes/alter"
Repository = "https://github.com/amirrezaes/alter"
Issues = "https://github.com/amirrezaes/alter/issues"

[project.scripts]
alter = "alter.cli:main"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"